--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -1,2 +1,8 @@
+addon-description=Allows you to set a custom icon for your Firefox in your Mac OS X dock.
+
 imagePath_title=Image File Path
 imagePath_description=A path to an image on your computer that the dock icon should be set to
+
+restoreDefault_title=Restore Default
+restoreDefault_description=If you have changed your icon, and want to restore the default Firefox icon, click this button
+restoreDefault_label=Restore
